def mainClassName = "pro.gravit.launchermodules.osslsigncode.OSSLSignCodeModule"

sourceCompatibility = '17'
targetCompatibility = '17'

dependencies {

}
jar {
    manifest.attributes("Module-Main-Class": mainClassName)
}
